// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "postgresql"
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}
enum Role {
  ADMIN
  USER
}

enum ProductType {
  MARBLE
  GRANITE
}

enum ProductOrigin {
  EGYPTIAN
  IMPORTED
}

enum RequestStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

model User {
  id                   String               @id @default(cuid())
  name                 String?
  email                String               @unique
  password             String
  role                 Role                 @default(USER)
  createdAt            DateTime             @default(now())
  updatedAt            DateTime             @updatedAt
  serviceRequests      ServiceRequest[]
  measurementRequests  MeasurementRequest[]
  contactMessages      ContactMessage[]
}

model Category {
  id          String      @id @default(cuid())
  name        String
  nameAr      String
  slug        String      @unique
  type        ProductType
  description String?
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  products    Product[]
}

model Product {
  id          String        @id @default(cuid())
  name        String
  nameAr      String
  slug        String        @unique
  description String?
  descriptionAr String?
  type        ProductType
  origin      ProductOrigin
  images      String[]
  price       Float?
  priceUnit   String?       @default("م²")
  isFeatured  Boolean       @default(false)
  isAvailable Boolean       @default(true)
  categoryId  String
  category    Category      @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
}

model ServiceRequest {
  id              String        @id @default(cuid())
  customerName    String
  customerPhone   String
  customerEmail   String?
  serviceType     String
  description     String?
  address         String
  latitude        Float?
  longitude       Float?
  status          RequestStatus @default(PENDING)
  adminNotes      String?
  userId          String?
  user            User?         @relation(fields: [userId], references: [id])
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
}

model MeasurementRequest {
  id              String        @id @default(cuid())
  customerName    String
  customerPhone   String
  customerEmail   String?
  address         String
  city            String
  details         String?
  preferredDate   DateTime?
  latitude        Float?
  longitude       Float?
  status          RequestStatus @default(PENDING)
  adminNotes      String?
  userId          String?
  user            User?         @relation(fields: [userId], references: [id])
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
}

model ContactMessage {
  id          String   @id @default(cuid())
  name        String
  email       String
  phone       String?
  subject     String
  message     String
  isRead      Boolean  @default(false)
  userId      String?
  user        User?    @relation(fields: [userId], references: [id])
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}
