//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String
  email String [unique, not null]
  password String [not null]
  role Role [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  serviceRequests ServiceRequest [not null]
  measurementRequests MeasurementRequest [not null]
  contactMessages ContactMessage [not null]
}

Table Category {
  id String [pk]
  name String [not null]
  nameAr String [not null]
  slug String [unique, not null]
  type ProductType [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  products Product [not null]
}

Table Product {
  id String [pk]
  name String [not null]
  nameAr String [not null]
  slug String [unique, not null]
  description String
  descriptionAr String
  type ProductType [not null]
  origin ProductOrigin [not null]
  images String[] [not null]
  price Float
  priceUnit String [default: 'م²']
  isFeatured Boolean [not null, default: false]
  isAvailable Boolean [not null, default: true]
  categoryId String [not null]
  category Category [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ServiceRequest {
  id String [pk]
  customerName String [not null]
  customerPhone String [not null]
  customerEmail String
  serviceType String [not null]
  description String
  address String [not null]
  latitude Float
  longitude Float
  status RequestStatus [not null, default: 'PENDING']
  adminNotes String
  userId String
  user User
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table MeasurementRequest {
  id String [pk]
  customerName String [not null]
  customerPhone String [not null]
  customerEmail String
  address String [not null]
  city String [not null]
  details String
  preferredDate DateTime
  latitude Float
  longitude Float
  status RequestStatus [not null, default: 'PENDING']
  adminNotes String
  userId String
  user User
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ContactMessage {
  id String [pk]
  name String [not null]
  email String [not null]
  phone String
  subject String [not null]
  message String [not null]
  isRead Boolean [not null, default: false]
  userId String
  user User
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum Role {
  ADMIN
  USER
}

Enum ProductType {
  MARBLE
  GRANITE
}

Enum ProductOrigin {
  EGYPTIAN
  IMPORTED
}

Enum RequestStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

Ref: Product.categoryId > Category.id [delete: Cascade]

Ref: ServiceRequest.userId > User.id

Ref: MeasurementRequest.userId > User.id

Ref: ContactMessage.userId > User.id